k3s-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-content
        configMap:
          name: website-content

---
apiVersion: v1
kind: Service
metadata:
  name: my-website-service
spec:
  selector:
    app: my-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
